tests/snapshots/pane__app__tests__help_mode_bottom.snap
---
source: src/app.rs
expression: content
---
"┌Every 0s: N/A─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                          │"
"│ N/A                                                                                                                                      │"
"│                                                                                                                                          │"
"│                                     ┌─────────────────────────────────────────────────────────────┐                                      │"
"│                                     │  Space                -> Execute                            │                                      │"
"│                                     │  d                    -> IntervalDecrease                ▴  │                                      │"
"│                                     │  i                    -> IntervalIncrease                ░  │                                      │"
"│                                     │  x                    -> KillPane                        ░  │                                      │"
"│                                     │  l                    -> LoadLatestSession               ░  │                                      │"
"│                                     │  <                    -> PaneDecreaseHorizontal          ░  │                                      │"
"│                                     │  Hyphen               -> PaneDecreaseVertical            ░  │                                      │"
"│                                     │  >                    -> PaneIncreaseHorizontal          ░  │                                      │"
"│                                     │  +                    -> PaneIncreaseVertical            ░  │                                      │"
"│                                     │  p                    -> Pause                           ░  │                                      │"
"│                                     │  r                    -> Resume                          ░  │                                      │"
"│                                     │  s                    -> SaveSession                     ░  │                                      │"
"│                                     │  h                    -> SplitHorizontal                 ░  │                                      │"
"│                                     │  v                    -> SplitVertical                   ░  │                                      │"
"│                                     │  w                    -> WrapToggle                      ░  │                                      │"
"│                                     │  z                    -> ZenToggle                       ░  │                                      │"
"│                                     │                                                          ░  │                                      │"
"│                                     │   KEYBINDINGS (Observe)                                  ░  │                                      │"
"│                                     │  ────────────────────────────────────────────────────────░  │                                      │"
"│                                     │  n                    -> NextMatch                       █  │                                      │"
"│                                     │  Shift-n              -> PrevMatch                       █  │                                      │"
"│                                     │  g                    -> ScrollBottom                    █  │                                      │"
"│                                     │  Shift-g              -> ScrollTop                       █  │                                      │"
"│                                     │  /                    -> Search                          █  │                                      │"
"│                                     │  w                    -> WrapToggle                      █  │                                      │"
"│                                     │                                                          █  │                                      │"
"│                                     │   KEYBINDINGS (SessionLoad)                              █  │                                      │"
"│                                     │  ────────────────────────────────────────────────────────█  │                                      │"
"│                                     │  Ctrl-d               -> Delete                          ▾  │                                      │"
"│                                     │  Ctrl-r               -> Rename                             │                                      │"
"│                                     └─────────────────────────────────────────────────────────────┘                                      │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────N/A┘"
" Help                                                                                                              ?-Help q/esc - Quit/Back "
