tests/snapshots/pane__app__tests__help_mode_top.snap
---
source: src/app.rs
expression: content
---
"┌Every N/A: N/A────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                          │"
"│ N/A                                                                                                                                      │"
"│                                                                                                                                          │"
"│                                     ┌─────────────────────────────────────────────────────────────┐                                      │"
"│                                     │   CONFIGURATION                                             ▴                                      │"
"│                                     │  ─────────────────────────────────────────────────────────  █                                      │"
"│                                     │  Beep                 -> false                              █                                      │"
"│                                     │  Default Display      -> RawText                            █                                      │"
"│                                     │  Exit on Change       -> false                              █                                      │"
"│                                     │  Exit on Error        -> false                              █                                      │"
"│                                     │  Interval             -> 5s                                 █                                      │"
"│                                     │  Log Level            -> None                               █                                      │"
"│                                     │  Logs Dir             -> /Users/fsaleh/.config/pane/logs    █                                      │"
"│                                     │  Max History          -> 10                                 █                                      │"
"│                                     │  Sessions Dir         -> /Users/fsaleh/.config/pane/sessio  █                                      │"
"│                                     │  Snapshot Dir         -> /Users/fsaleh/.config/pane/snapsh  █                                      │"
"│                                     │  Wrap                 -> true                               █                                      │"
"│                                     │  Zen                  -> false                              █                                      │"
"│                                     │                                                             ░                                      │"
"│                                     │   THEME                                                     ░                                      │"
"│                                     │  ─────────────────────────────────────────────────────────  ░                                      │"
"│                                     │  Collapse Borders     -> false                              ░                                      │"
"│                                     │  Show State           -> false                              ░                                      │"
"│                                     │  Show Last Update     -> false                              ░                                      │"
"│                                     │  Show Display Type    -> true                               ░                                      │"
"│                                     │  Show Status Bar      -> true                               ░                                      │"
"│                                     │                                                             ░                                      │"
"│                                     │   KEYBINDINGS (CmdEdit)                                     ░                                      │"
"│                                     │  ─────────────────────────────────────────────────────────  ░                                      │"
"│                                     │  Tab                  -> TabComplete                        ░                                      │"
"│                                     │                                                             ░                                      │"
"│                                     │   KEYBINDINGS (Global)                                      ░                                      │"
"│                                     │  ─────────────────────────────────────────────────────────  ░                                      │"
"│                                     │  Enter                -> Confirm                            ▾                                      │"
"│                                     └─────────────────────────────────────────────────────────────┘                                      │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────RawText┘"
" Help                                                                                                              ?-Help q/esc - Quit/Back "
