tests/snapshots/pane__app__tests__normal_mode_no_display_type.snap
---
source: src/app.rs
expression: content
---
"┌Every 100ms: ls───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                          │"
"│    1 Cargo.lockCargo.tomldist-workspace.tomldocsREADME.mdrustfmt.tomlsrctargettestsTODO.md                                               │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"└▮▯▯▯▯▯▯▯▯▯────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Every 100ms: echo test───────────┐┌Every 100ms: ls────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                 ││                                                                                                       │"
"│ test                            ││ Cargo.lock                                                                                            │"
"│                                 ││ Cargo.toml                                                                                            │"
"│                                 ││ dist-workspace.toml                                                                                   │"
"│                                 ││ docs                                                                                                  │"
"│                                 ││ README.md                                                                                             │"
"│                                 ││ rustfmt.toml                                                                                          │"
"│                                 ││ src                                                                                                   │"
"│                                 ││ target                                                                                                │"
"│                                 ││ tests                                                                                                 │"
"│                                 ││ TODO.md                                                                                               │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"└▮▯▯▯▯▯▯▯▯▯───────────────────────┘└▮▯▯▯▯▯▯▯▯▯─────────────────────────────────────────────────────────────────────────────────────────────┘"
" Normal                                                                                                            ?-Help q/esc - Quit/Back "
